update to login controller

--- a/public/views/login/login.html
+++ b/public/views/login/login.html
@@ -9,7 +9,7 @@
             <button type="button" name="button" class="login-btn">LOGIN WITH GOOGLE</button>
         </a>
 
-        <a ng-click="model.learnMore()" id="learn-more" class="center-text">
+        <a id="learn-more" class="center-text">
             Learn More
         </a>
     </div>
