--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,8 +1,21 @@
-nav .cog {
-  position: absolute;
-  left: 30px;
-  line-height: 60px;
-}
-nav .cog .fa-cog {
-  font-size: 1.5em;
-}
+/*header {*/
+  /*border-bottom: 1px solid #ddd;*/
+  /*display: flex;*/
+  /*padding: 15px;*/
+  /*text-align: center;*/
+  /*width: 100%;*/
+/*}*/
+/*header .user-icon {*/
+  /*position: absolute;*/
+/*}*/
+/*header .user-icon img {*/
+
+/*}*/
+/*header .logo {*/
+  /*background-color: green;*/
+  /*margin: 0 auto;*/
+  /*padding: 10px;*/
+/*}*/
+/*header .logo img {*/
+
+/*}*/
