--- a/public/views/components/tabs.html
+++ b/public/views/components/tabs.html
@@ -5,17 +5,13 @@
             <i class="fa fa-home" aria-hidden="true"></i>
             <small>Home</small>
         </a>
-        <a href="#/scheduler">
-            <i class="fa fa-calendar-o" aria-hidden="true"></i>
-            <small>Scheduler</small>
-        </a>
-        <a href="#/transactions">
-            <i class="fa fa-refresh" aria-hidden="true"></i>
-            <small>Transactions</small>
-        </a>
         <a href="#/expenses">
             <i class="fa fa-usd" aria-hidden="true"></i>
             <small>Expenses</small>
+        </a>
+        <a href="#/appointments">
+            <i class="fa fa-calendar-o" aria-hidden="true"></i>
+            <small>Appointments</small>
         </a>
     </nav>
 </footer>
