--- a/public/views/settings/settings.html
+++ b/public/views/settings/settings.html
@@ -1,55 +1,90 @@
-<div class="container settings">
-  <ul>
-    <li>
-      <label>Account</label>
-      <span>jsingh@email.com</span>
-    </li>
-    <li>
-      <label>Subscription</label>
-      <div class="right">
-        <span>Free Trial</span>
-        <a><i class="fa fa-angle-right" aria-hidden="true"></i></a>
-     </div>
-    </li>
+<header>
+  <a class="user-icon" href="#/settings">
+    <img ng-src="./img/user-active.png" alt="user" />
+  </a>
+  <a class="logo">
+    <img ng-src="./img/logo.png" alt="logo"/>
+  </a>
+</header>
+<section class="container-settings">
+  <h2>User Profile</h2>
+  <label>Name</label>
+  <input type="text"disabled value="Keniesha Mendes"> <!-- Name pulled from Fb/Gmail -->
+  <label>Email</label>
+  <input type="text"disabled value="kelisemendes25@gmail.com"> <!-- Email pulled from
+  Fb/Gmail -->
+  <label>Tax Profile</label>
 
-    <li>
-      <label>Bank Accounts</label>
-      <a><i class="fa fa-angle-right" aria-hidden="true"></i></a>
-    </li>
+</section>
+<!--<div class="container settings">-->
+  <!--<ul>-->
+    <!--<li>-->
+      <!--<label>Account</label>-->
+      <!--<span>jsingh@email.com</span>-->
+    <!--</li>-->
+    <!--<li>-->
+      <!--<label>Subscription</label>-->
+      <!--<div class="right">-->
+        <!--<span>Free Trial</span>-->
+        <!--<a><i class="fa fa-angle-right" aria-hidden="true"></i></a>-->
+     <!--</div>-->
+    <!--</li>-->
 
-    <li>
-      <label>Tax Profile</label>
-      <a><i class="fa fa-angle-right" aria-hidden="true"></i></a>
-    </li>
+    <!--<li>-->
+      <!--<label>Bank Accounts</label>-->
+      <!--<a><i class="fa fa-angle-right" aria-hidden="true"></i></a>-->
+    <!--</li>-->
 
-    <li>
-      <label>Rules</label>
-      <a><i class="fa fa-angle-right" aria-hidden="true"></i></a>
-    </li>
+    <!--<li>-->
+      <!--<label>Tax Profile</label>-->
+      <!--<a><i class="fa fa-angle-right" aria-hidden="true"></i></a>-->
+    <!--</li>-->
 
-    <li>
-      <label>Reports</label>
-      <a><i class="fa fa-angle-right" aria-hidden="true"></i></a>
-    </li>
+    <!--<li>-->
+      <!--<label>Rules</label>-->
+      <!--<a><i class="fa fa-angle-right" aria-hidden="true"></i></a>-->
+    <!--</li>-->
 
-    <li>
-      <label>Push Notifications</label>
-      <button></button>
-    </li>
+    <!--<li>-->
+      <!--<label>Reports</label>-->
+      <!--<a><i class="fa fa-angle-right" aria-hidden="true"></i></a>-->
+    <!--</li>-->
 
-    <li>
-      <label>Save Receipts to Camara Roll</label>
-      <button></button>
-    </li>
+    <!--<li>-->
+      <!--<label>Push Notifications</label>-->
+      <!--<button></button>-->
+    <!--</li>-->
 
-    <li>
-      <label>Touch ID and App PIN</label>
-      <a><i class="fa fa-angle-right" aria-hidden="true"></i></a>
-    </li>
+    <!--<li>-->
+      <!--<label>Save Receipts to Camara Roll</label>-->
+      <!--<button></button>-->
+    <!--</li>-->
 
-    <li>
-      <label>Legal</label>
-      <a><i class="fa fa-angle-right" aria-hidden="true"></i></a>
-    </li>
-  </ul>
-</div>
+    <!--<li>-->
+      <!--<label>Touch ID and App PIN</label>-->
+      <!--<a><i class="fa fa-angle-right" aria-hidden="true"></i></a>-->
+    <!--</li>-->
+
+    <!--<li>-->
+      <!--<label>Legal</label>-->
+      <!--<a><i class="fa fa-angle-right" aria-hidden="true"></i></a>-->
+    <!--</li>-->
+  <!--</ul>-->
+<!--</div>-->
+
+<footer>
+  <nav>
+    <a href="#/home">
+      <i class="fa fa-home" aria-hidden="true"></i>
+      <small>Home</small>
+    </a>
+    <a href="#/expenses">
+      <i class="fa fa-usd" aria-hidden="true"></i>
+      <small>Expenses</small>
+    </a>
+    <a href="#/appointments">
+      <i class="fa fa-calendar-o" aria-hidden="true"></i>
+      <small>Appointments</small>
+    </a>
+  </nav>
+</footer>
