fixed google login

--- a/public/views/login/login.html
+++ b/public/views/login/login.html
@@ -21,6 +21,12 @@
                 Login with Google
             </button>
         </a>
+        <!--<a ng-click="model.login($event)" id="login-google">-->
+            <!--<button>-->
+                <!--<img class="social-icon" ng-src="./img/google-icon.png" alt="gmail-logo"/>-->
+                <!--Login with Google-->
+            <!--</button>-->
+        <!--</a>-->
     </div>
 </section>
 <!-- TABS FOR THE NAV -->
