--- a/public/views/home/home-month.html
+++ b/public/views/home/home-month.html
@@ -7,9 +7,7 @@
     </a>
 </header>
 <section class="container-home">
-    <p>Hello {{ model.username }}, view your monthly growth in business below</p>
-    <p>Model : {{ model }}</p>
-    <p>Model User : {{ model.user}}</p>
+    <p>Hello {{ model.user.firstname }} {{ model.user.lastname }}, view your monthly growth in business below</p>
     <div class="home-buttons">
         <a href="#/home/week">
             <button>Wk</button>
