attempt again at api

--- a/public/views/home/home-week.html
+++ b/public/views/home/home-week.html
@@ -7,7 +7,7 @@
     </a>
 </header>
 <section class="container-home">
-    <p>Hello {{model.user.firstname}} {{model.user.lastname}}, view your weekly growth in
+    <p>Hello {{model.userid}} {{model.user}}, {{model.user.firstname}}, view your weekly growth in
         business below</p>
     <p>Model User : {{model.user}}</p>
     <div class="home-buttons">
