attempt again at api pt 2

--- a/public/views/home/home-week.html
+++ b/public/views/home/home-week.html
@@ -9,8 +9,8 @@
 <section class="container-home">
     <p>Hello view your weekly growth in
         business below</p>
-    <p>Model User : </p>
-    <div class="home-buttons {{ model.userid }}">
+    <p>Model User : {{model.test}}</p>
+    <div class="home-buttons">
         <a href="#/home/week">
             <button class="active">Wk</button>
         </a>
