attempt again at api pt 4

--- a/public/views/home/home-week.html
+++ b/public/views/home/home-week.html
@@ -9,7 +9,7 @@
 <section class="container-home">
     <p>Hello view your weekly growth in
         business below</p>
-    <p>Model User : {{model.test}}</p>
+    <p>Model User : {{model.test}} {{test}}, {{vm.test}}, {{this.test}}</p>
     <div class="home-buttons">
         <a href="#/home/week">
             <button class="active">Wk</button>
