api logs to console but does not bind data to html, using scope directive now

--- a/public/views/home/home-week.html
+++ b/public/views/home/home-week.html
@@ -10,6 +10,11 @@
     <p>Hello view your weekly growth in
         business below</p>
     <p>Model User : {{model.test}} {{test}}, {{vm.test}}, {{this.test}}</p>
+    <span ng-bind="test"></span>
+    <span ng-bind="userscope"></span>
+    <span ng-bind="model.test"></span>
+    <span ng-bind="model.test"></span>
+    <span>ng bind used above</span>
     <div class="home-buttons">
         <a href="#/home/week">
             <button class="active">Wk</button>
