--- a/public/views/home/home-week.html
+++ b/public/views/home/home-week.html
@@ -10,10 +10,10 @@
     <p>Hello view your weekly growth in
         business below</p>
     <p>Model User : {{model.test}} {{test}}, {{vm.test}}, {{this.test}}</p>
-    <span ng-bind="test"></span>
-    <span ng-bind="userscope"></span>
-    <span ng-bind="model.test"></span>
-    <span ng-bind="model.test"></span>
+    <!--<span ng-bind="test"></span>-->
+    <span ng-bind="userscope.lastname"></span>
+    <span ng-bind="model.user.firstname"></span>
+    <span ng-bind="model.user.id"></span>
     <span>ng bind used above</span>
     <div class="home-buttons">
         <a href="#/home/week">
