updating settings page

--- a/public/views/home/home-week.html
+++ b/public/views/home/home-week.html
@@ -8,16 +8,9 @@
 </header>
 <section class="container-home">
     <p>Hello </p>
-    <span ng-bind="model.user.firstname"></span>
-    <span ng-bind="model.user.lastname"></span>
-    <p>view your weekly growth in business below</p>
-
-    <p>here is some text, here goes the bind:
-        <span ng-bind="model.user.firstname"></span>
-    </p>
-    <!--<span ng-bind="model.user.lastname"></span>-->
-    <!--<span ng-bind="model.user.firstname"></span>-->
-    <!--<span ng-bind="model.user.id"></span>-->
+    <p ng-bind="model.user.firstname"></p>
+    <p ng-bind="model.user.lastname"></p>
+    <p>, view your weekly growth in business below</p>
 
     <div class="home-buttons">
         <a href="#/home/week">
