--- a/public/views/settings/settings.html
+++ b/public/views/settings/settings.html
@@ -9,68 +9,14 @@
 <section class="container-settings">
   <h2>User Profile</h2>
   <label>Name</label>
-  <input type="text"disabled value="Keniesha Mendes"> <!-- Name pulled from Fb/Gmail -->
+  <input type="text"disabled ng-model="user.firstname"> <!-- Name pulled from Fb/Gmail -->
   <label>Email</label>
-  <input type="text"disabled value="kelisemendes25@gmail.com"> <!-- Email pulled from
-  Fb/Gmail -->
+  <input type="text"disabled ng-model="user.email">
+  <input type="text"disabled ng-model="model.user.email">
+  <!-- Email pulled from Fb/Gmail -->
   <label>Tax Profile</label>
 
 </section>
-<!--<div class="container settings">-->
-  <!--<ul>-->
-    <!--<li>-->
-      <!--<label>Account</label>-->
-      <!--<span>jsingh@email.com</span>-->
-    <!--</li>-->
-    <!--<li>-->
-      <!--<label>Subscription</label>-->
-      <!--<div class="right">-->
-        <!--<span>Free Trial</span>-->
-        <!--<a><i class="fa fa-angle-right" aria-hidden="true"></i></a>-->
-     <!--</div>-->
-    <!--</li>-->
-
-    <!--<li>-->
-      <!--<label>Bank Accounts</label>-->
-      <!--<a><i class="fa fa-angle-right" aria-hidden="true"></i></a>-->
-    <!--</li>-->
-
-    <!--<li>-->
-      <!--<label>Tax Profile</label>-->
-      <!--<a><i class="fa fa-angle-right" aria-hidden="true"></i></a>-->
-    <!--</li>-->
-
-    <!--<li>-->
-      <!--<label>Rules</label>-->
-      <!--<a><i class="fa fa-angle-right" aria-hidden="true"></i></a>-->
-    <!--</li>-->
-
-    <!--<li>-->
-      <!--<label>Reports</label>-->
-      <!--<a><i class="fa fa-angle-right" aria-hidden="true"></i></a>-->
-    <!--</li>-->
-
-    <!--<li>-->
-      <!--<label>Push Notifications</label>-->
-      <!--<button></button>-->
-    <!--</li>-->
-
-    <!--<li>-->
-      <!--<label>Save Receipts to Camara Roll</label>-->
-      <!--<button></button>-->
-    <!--</li>-->
-
-    <!--<li>-->
-      <!--<label>Touch ID and App PIN</label>-->
-      <!--<a><i class="fa fa-angle-right" aria-hidden="true"></i></a>-->
-    <!--</li>-->
-
-    <!--<li>-->
-      <!--<label>Legal</label>-->
-      <!--<a><i class="fa fa-angle-right" aria-hidden="true"></i></a>-->
-    <!--</li>-->
-  <!--</ul>-->
-<!--</div>-->
 
 <footer>
   <nav>
