logged in user data showing across app

--- a/public/views/home/home-ytd.html
+++ b/public/views/home/home-ytd.html
@@ -7,9 +7,7 @@
     </a>
 </header>
 <section class="container-home">
-    <p>Hello <p ng-bind="model.user.firstname"> </p>
-    <p ng-bind="model.user.lastname"></p>,
-        view your yearly growth in business below</p>
+    <p>Hello <span ng-bind="model.user.name"></span> view your yearly growth in business below</p>
     <div class="home-buttons">
         <a href="#/home/week">
             <button>Wk</button>
