--- a/public/views/home/home-week.html
+++ b/public/views/home/home-week.html
@@ -7,10 +7,8 @@
     </a>
 </header>
 <section class="container-home">
-    <p>Hello </p>
-    <p ng-bind="model.user.firstname"></p>
-    <p ng-bind="model.user.lastname"></p>
-    <p>, view your weekly growth in business below</p>
+    <p>Hello <span ng-bind="model.user.name"></span> view your weekly growth in
+        business below</p>
 
     <div class="home-buttons">
         <a href="#/home/week">
