--- a/public/views/settings/settings.html
+++ b/public/views/settings/settings.html
@@ -9,7 +9,7 @@
 <section class="container-settings">
   <h2>User Profile</h2>
   <label>Name</label>
-  <input type="text" disabled ng-model="user.name">
+  <input type="text" disabled ng-model="model.user.name">
   <!-- Name pulled from Fb/Gmail -->
   <label>Email</label>
   <!--<input type="text" disabled ng-model="user.email">-->
