--- a/public/views/home/home-ytd.html
+++ b/public/views/home/home-ytd.html
@@ -8,6 +8,7 @@
 </header>
 <section class="container-home">
     <p>Hello <span ng-bind="model.user.name"></span> view your yearly growth in business below</p>
+    <span ng-bind="model.user.name"></span>
     <div class="home-buttons">
         <a href="#/home/week">
             <button>Wk</button>
