--- a/public/views/appointments/appointments-list.html
+++ b/public/views/appointments/appointments-list.html
@@ -14,31 +14,13 @@
     </a>
   </div>
   <h2>Appointments</h2>
-  <div class="appointment">
-    <label>Client Name</label>
-    <label>Amount</label>
-    <p>{{ model.appointment.client }} Aubrey Static</p>
-    <p>{{ model.appointment.amount }} $100</p>
-    <label>Service</label>
-    <p>{{ model.appointment.service }} Wash, Blow out, Color Correction</p>
-  </div>
-  <div class="appointment">
-    <label>Client Name</label>
-    <label>Amount</label>
-    <p>{{ model.appointment.client }} Aubrey Static</p>
-    <p>{{ model.appointment.amount }} $100</p>
-    <label>Service</label>
-    <p>{{ model.appointment.service }} Wash, Blow out, Color Correction</p>
-  </div>
-
   <div class="appointment" ng-repeat="appt in model.appts">
     <label>Client Name</label>
     <label>Amount</label>
-    <p>N {{ appt.client }} </p>
+    <p>{{ appt.client }} </p>
     <p>${{ appt.amount }} </p>
     <label>Service</label>
     <p>{{ appt.note }} Wash, Blow out, Color Correction</p>
-    <p ng-bind="appt.note"></p>
   </div>
 </section>
 <footer>
