--- a/public/views/home/home-month.html
+++ b/public/views/home/home-month.html
@@ -9,6 +9,7 @@
 <section class="container-home">
     <p>Hello <span ng-bind="model.user.name"></span> view your monthly growth in
         business below</p>
+    <span ng-bind="model.user.name"></span>
     <div class="home-buttons">
         <a href="#/home/week">
             <button>Wk</button>
