updated login redirect, appointments and delete functionality

--- a/public/views/appointments/appointments-new.html
+++ b/public/views/appointments/appointments-new.html
@@ -11,7 +11,7 @@
   <form>
     <label for="appointment-client">Client Name</label>
     <input type="text" name="appointment-client" id="appointment-client"
-           placeholder="Client Name"> <!--ng-model="model.appt.client"-->
+           placeholder="Client Name" ng-model="model.appt.client">
     <label for="appointment-amount">Amount</label>
     <input type="text" name="appointment-amount" id="appointment-amount"
            placeholder="Appointment Total" ng-model="model.appt.amount">
