--- a/public/views/appointments/appointments-list.html
+++ b/public/views/appointments/appointments-list.html
@@ -21,6 +21,7 @@
     <p>${{ appt.amount }} </p>
     <label>Service</label>
     <p>{{ appt.note }} Wash, Blow out, Color Correction</p>
+    <button ng-click="model.deleteAppointment($event)">Delete3</button>
   </div>
 </section>
 <footer>
